--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             </div>
         </nav>
         <!-- Page Content-->
-            </section>
             <hr class="m-0" />
             <!-- Where-->
             <section class="resume-section" id="Where">
@@ -51,13 +50,20 @@
             </section>
             <hr class="m-0" />
             <!-- Contac-->
-            <section class="resume-section" id="Contac">
+            <section class="resume-section" id="Contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact</h2>
                     <div class="subheading mb-3">Flyer</div>
                     <object data="dist/assets/img/Flyer.pdf" width="1000" height="1000" type='application/pdf'></object>
                 </div>
             </section>
+            <!-- WoC-->
+            <section class="resume-section" id="WoC">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">WoC around the US</h2>
+                    <div class="subheading mb-3">Flyer</div>
+                </div>
+            </section>       
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
