--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             <!-- Where-->
             <section class="resume-section" id="Where">
                 <div class="resume-section-content">
-                    In Downtown Raleigh
+                    The Way of the Cross will start and finish at Sacred Heart Church, 200 Hillsborough St Raleigh, NC 27603. 
+                    The procession will make three stops throughout downtown Raleigh. 
                 </div>
             </section>
             <hr class="m-0" />
             <!-- When-->
             <section class="resume-section" id="When">
                 <div class="resume-section-content">
-                    Good Friday
+                    On Good Friday, April 7th. We will start at 10.30 am and conclude by 1.00 pm.
                 </div>
             </section>
             <hr class="m-0" />
