--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact</h2>
                     <div class="subheading mb-3">Flyer</div>
-                    <object data="dist/assets/img/Flyer.pdf" width="1000" height="1000" type='application/pdf'></object>
+                    <object data="dist/assets/img/Flyer 2023 - WayOfTheCrossRaleigh.pdf" width="1000" height="1000" type='application/pdf'></object>
                 </div>
             </section>
             <!-- WoC-->
             <section class="resume-section" id="WoC">
                 <div class="resume-section-content">
                     <h2 class="mb-5">WoC around the US</h2>
-                    <div class="subheading mb-3">Flyer</div>
+                    <div class="subheading mb-3">The first Way of the Cross in the US in this format started in NYC: https://wocbrooklynbridge.wordpress.com/</div>
                 </div>
             </section>       
         </div>
