--- a/index.html
+++ b/index.html
@@ -70,12 +70,19 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Contac-->
+            <!-- Share-->
+            <section class="resume-section" id="Share">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Share</h2>
+                    <div class="subheading mb-3">Dowload and Share the Flyer</div>
+                    <object data="dist/assets/img/Flyer 2023 - WayOfTheCrossRaleigh.pdf" width="1000" height="1000" type='application/pdf'></object>
+                </div>
+            </section>
+            <!-- Contact-->
             <section class="resume-section" id="Contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact</h2>
-                    <div class="subheading mb-3">Flyer</div>
-                    <object data="dist/assets/img/Flyer 2023 - WayOfTheCrossRaleigh.pdf" width="1000" height="1000" type='application/pdf'></object>
+                    <div class="subheading mb-3">Contact us for any question at clcommunityraleigh@gmail.com</div>
                 </div>
             </section>
             <!-- WoC-->
