--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Where">Where</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#When">When</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Share">Share</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#WoC">WoC around the US</a></li>
                 </ul>
