--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             <!-- Where-->
             <section class="resume-section" id="Where">
                 <div class="subheading mb-3">
-                    The Way of the Cross will start and finish at Sacred Heart Church, 200 Hillsborough St Raleigh, NC 27603. 
+                    The Way of the Cross will start and finish at 
+                    <h3 class="text-center">
+                    Sacred Heart Church, 
+                    200 Hillsborough St Raleigh, NC 27603. 
+                    </h3>
                     The procession will make three stops throughout downtown Raleigh. 
                 </div>
             </section>
@@ -67,7 +71,8 @@
             <!-- When-->
             <section class="resume-section" id="When">
                 <div class="subheading mb-3">
-                    On Good Friday, April 7th. We will start at 10.30 am and conclude by 1.00 pm.
+                    The Way of Cross will be <h3 class="text-center"> on Good Friday, April 7th, 2023 </h3>
+                    We will start at 10.30 am and conclude by 1.00 pm.
                 </div>
             </section>
             <hr class="m-0" />
@@ -83,14 +88,18 @@
             <section class="resume-section" id="Contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact</h2>
-                    <div class="subheading mb-3">Contact us for any question at clcommunityraleigh@gmail.com</div>
+                    <div class="subheading mb-3">
+                       Contact us for any question at:  
+                       <a href="mailto:name@email.com">clcommunityraleigh@gmail.com</a> </div>
                 </div>
             </section>
             <!-- WoC-->
             <section class="resume-section" id="WoC">
                 <div class="resume-section-content">
                     <h2 class="mb-5">WoC around the US</h2>
-                    <div class="subheading mb-3">The first Way of the Cross in the US in this format started in NYC: https://wocbrooklynbridge.wordpress.com/</div>
+                    <div class="subheading mb-3">The first Way of the Cross in the US in this format started in NYC: 
+                        <a href='https://wocbrooklynbridge.wordpress.com/'>Click here to learn more.</a>
+                        </div>
                 </div>
             </section>       
         </div>
