--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Way of the Cross</span>
                     </h1>
                     <div class="subheading mb-5">
-                        In Downtown Raleigh.
+                        <h3 class="text-center"> In Downtown Raleigh. </h3>
                     </div>
                     <p class="lead mb-5"> The idea of a Way of the Cross around the streets of Downtown Raleigh was born to help ourselves to be immersed in the Passion of Christ, that the Church invites us to meditate on Good Friday, and second as a missionary gesture for the city we live in. 
                                        The procession will make stops throughout downtown Raleigh. At each station, we will follow the traditional readings from the Gospel and supplement them with choral songs and short passages from modern Catholic writers like Paul Claudel and Charles Peguy. </p>
