--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
             <section class="resume-section" id="Where">
                 <div class="subheading mb-3">
                     The Way of the Cross will start and finish at 
-                    <h3 class="text-center">
-                    Sacred Heart Church, 
-                    200 Hillsborough St Raleigh, NC 27603. 
+                    <h3 class="text-center">  Sacred Heart Church, 
+                          200 Hillsborough St Raleigh, NC 27603. 
                     </h3>
                     The procession will make three stops throughout downtown Raleigh. 
                 </div>
