--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#When">When</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Share">Share</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#WoC">WoC around the US</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#WoC">History</a></li>
                 </ul>
             </div>
         </nav>
@@ -96,8 +96,12 @@
             <!-- WoC-->
             <section class="resume-section" id="WoC">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">WoC around the US</h2>
-                    <div class="subheading mb-3">The first Way of the Cross in the US in this format started in NYC: 
+                    <h2 class="mb-5">History</h2>
+                    <div class="subheading mb-3">The founder of <a href='https://us.clonline.org/'>Communion and Liberation</a>, Servant of God Fr. Luigi Giussani (1922-2005), started proposing this gesture of the Christian faith to college students, gathering them by the thousands in Caravaggio, Italy. 
+                        To supplement the traditional readings from the Gospel, Fr. Giussani introduced short passages from some of the greatest contemporary Catholic writers, including Paul Claudel and Charles Peguy, who help to express the contemporary reverberations of Christ’s historic death and resurrection in our world. 
+                        Fr. Giussani also asked that a choir accompany the procession, singing at every station to constantly reawaken the awareness of the faithful with the beauty and sorrow that only choral music can express.
+
+On a cloudy and rainy Good Friday in 1996, a handful of friends belonging to Communion and Liberation in the United States made the first Way of the Cross over the Brooklyn Bridge.
                         <a href='https://wocbrooklynbridge.wordpress.com/'>Click here to learn more.</a>
                         </div>
                 </div>
