--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="subheading mb-5">
                         <h3 class="text-center"> Through Downtown Raleigh. </h3>
                     </div>
-                    <p class="lead mb-5"> The idea of a Way of the Cross around the streets of Downtown Raleigh was born to help ourselves to be immersed in the Passion of Christ, that the Church invites us to meditate on Good Friday, and second as a missionary gesture for the city we live in. 
+                    <p class="lead mb-5"> The idea of a <span style="color: #a65132">Way of the Cross</span> around the streets of Downtown Raleigh was born to help ourselves to be immersed in the <span style="color: #a65132">Passion of Christ</span>, that the Church invites us to meditate on Good Friday, and as a <span style="color: #a65132">missionary gesture</span> for the city we live in. 
                                        
                         The procession will make severak stops throughout downtown Raleigh. At each station, we will follow the traditional readings from the Gospel and supplement them with choral songs and short passages from modern Catholic writers like Paul Claudel and Charles Peguy. </p>
                     <div class="social-icons">
