--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="google-site-verification" content="Nvz6DgujBFfxAxZ9T3PuMWu_hcCfqkfEQ_HSYaluzew" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Way of the Cross - Raleigh (NC) </title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Way of the Cross - Downtown Raleigh</span>
+                <span class="d-block d-lg-none">Way of the Cross - Raleigh</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="dist/assets/img/congdon-william_crucifixion.jpeg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -44,9 +44,9 @@
                         <span class="text-primary">Way of the Cross</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <h3 class="text-center"> Through Downtown Raleigh. </h3>
+                        <h3 class="text-center"> Through Downtown Raleigh (NC). </h3>
                     </div>
-                    <p class="lead mb-5"> The idea of a <span style="color: #a65132">Way of the Cross</span> around the streets of Downtown Raleigh was born to help ourselves to be immersed in the <span style="color: #a65132">Passion of Christ</span>, that the Church invites us to meditate on Good Friday, and as a <span style="color: #a65132">missionary gesture</span> for the city we live in. 
+                    <p class="lead mb-5"> The idea of a <span style="color: #a65132">Way of the Cross</span> around the streets of Downtown Raleigh (NC) was born to help ourselves to be immersed in the <span style="color: #a65132">Passion of Christ</span>, that the Church invites us to meditate on Good Friday, and as a <span style="color: #a65132">missionary gesture</span> for the city we live in. 
                                        
                         The procession will make severak stops throughout downtown Raleigh. At each station, we will follow the traditional readings from the Gospel and supplement them with choral songs and short passages from modern Catholic writers like Paul Claudel and Charles Peguy. </p>
                     <div class="social-icons">
