--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <!-- Where-->
             <section class="resume-section" id="Where">
                 <div class="subheading mb-3">
+                    <h2 class="mb-5">Where</h2>
                     The Way of the Cross will start and finish at  <h3 class="text-center"> Sacred Heart Church, </h3>
                     <h3 class="text-center"> 200 Hillsborough St Raleigh, NC 27603. </h3>
                     The procession will make three stops throughout downtown Raleigh. 
@@ -69,6 +70,7 @@
             <!-- When-->
             <section class="resume-section" id="When">
                 <div class="subheading mb-3">
+                    <h2 class="mb-5">When</h2>
                     The Way of Cross will be <h3 class="text-center"> on Good Friday, April 7th, 2023 </h3>
                     We will start at 10.30 am and conclude by 1.00 pm.
                 </div>
