--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact</h2>
                     <div class="subheading mb-3">
-                       Contact us for any question at:  
+                       For any question, contact us at:  
                        <a href="mailto:name@email.com">clcommunityraleigh@gmail.com</a> </div>
                 </div>
             </section>
