--- a/index.html
+++ b/index.html
@@ -100,11 +100,15 @@
                     <p class="lead mb-5"> The founder of <a href='https://us.clonline.org/'>Communion and Liberation</a>, Servant of God Fr. Luigi Giussani (1922-2005), started proposing this gesture of the Christian faith to college students, gathering them by the thousands in Caravaggio, Italy. 
                         To supplement the traditional readings from the Gospel, Fr. Giussani introduced short passages from some of the greatest contemporary Catholic writers, including Paul Claudel and Charles Peguy, who help to express the contemporary reverberations of Christ’s historic death and resurrection in our world. 
                         Fr. Giussani also asked that a choir accompany the procession, singing at every station to constantly reawaken the awareness of the faithful with the beauty and sorrow that only choral music can express.
-
+                    
+                    <p class="lead mb-5"> The gesture of the Way of the Cross proposed by Fr Giussani has spread around the world.
+                        
 On a cloudy and rainy Good Friday in 1996, a handful of friends belonging to Communion and Liberation in the United States made the first Way of the Cross over the Brooklyn Bridge.
                         <a href='https://wocbrooklynbridge.wordpress.com/'>Click here to learn more.</a> </p>
+                    Since then, tens of cities across the United States have started proposing the same gesture in their cities:
+                    <a href='https://www.clnewsletter.org/post/the-way-of-the-cross-around-america'>Click here to learn more.</a> </p>
                 </div>
-            </section>       
+            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
