--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">History</h2>
                     <p class="lead mb-5"> The founder of <a href='https://us.clonline.org/'>Communion and Liberation</a>, Servant of God Fr. Luigi Giussani (1922-2005), started proposing this gesture of the Christian faith to college students, gathering them by the thousands in Caravaggio, Italy. 
-                        To supplement the traditional readings from the Gospel, Fr. Giussani introduced short passages from some of the greatest contemporary Catholic writers, including Paul Claudel and Charles Peguy, who help to express the contemporary reverberations of Christ’s historic death and resurrection in our world. 
+                        To supplement the traditional readings from the Gospel, Fr. Giussani introduced short passages from some of the greatest contemporary Catholic writers, including Paul Claudel and Charles Peguy, who help to express the contemporary reverberations of Christ’s historic death and resurrection in our world. </p>
                         Fr. Giussani also asked that a choir accompany the procession, singing at every station to constantly reawaken the awareness of the faithful with the beauty and sorrow that only choral music can express.
                     
                     <p class="lead mb-5"> The gesture of the Way of the Cross proposed by Fr Giussani has spread around the world.
