--- a/index.html
+++ b/index.html
@@ -97,14 +97,17 @@
             <section class="resume-section" id="WoC">
                 <div class="resume-section-content">
                     <h2 class="mb-5">History</h2>
-                    <p class="lead mb-5"> The founder of <a href='https://us.clonline.org/'>Communion and Liberation</a>, Servant of God Fr. Luigi Giussani (1922-2005), started proposing this gesture of the Christian faith to college students, gathering them by the thousands in Caravaggio, Italy. 
+                    <div class="subheading mb-3"> The origin of this gesture </div>  
+                    <p class="lead mb-5"> The founder of <a href='https://us.clonline.org/'>Communion and Liberation</a>, Servant of God Fr. Luigi Giussani (1922-2005), started proposing the Way of the Cross to college students, gathering them by the thousands in Caravaggio, Italy. 
                         To supplement the traditional readings from the Gospel, Fr. Giussani introduced short passages from some of the greatest contemporary Catholic writers, including Paul Claudel and Charles Peguy, who help to express the contemporary reverberations of Christ’s historic death and resurrection in our world. 
                         Fr. Giussani also asked that a choir accompany the procession, singing at every station to constantly reawaken the awareness of the faithful with the beauty and sorrow that only choral music can express. </p>
                     
+                    <div class="subheading mb-3"> The Way of the Cross across the United States </div>  
                     <p class="lead mb-5"> The gesture of the Way of the Cross proposed by Fr Giussani has spread around the world.
-                        
-On a cloudy and rainy Good Friday in 1996, a handful of friends belonging to Communion and Liberation in the United States made the first Way of the Cross over the Brooklyn Bridge.
-                        <a href='https://wocbrooklynbridge.wordpress.com/'>Click here to learn more about the WoC in New York City.</a> </p>
+                     On a cloudy and rainy Good Friday in 1996, a handful of friends belonging to Communion and Liberation in the United States made the first Way of the Cross over the Brooklyn Bridge.
+                        With the blessing of then Bishop of Brooklyn, H.E. Thomas V. Daily, and accompanied by Fr. Ronald Marino from the Diocese of Brooklyn, less than thirty people followed the Cross along the bridge that day.
+                        Last year, around three thousands people participated
+                        <a href='https://wocbrooklynbridge.wordpress.com/'>(Click here to learn more about the WoC in New York City)</a>.
                     Since then, tens of cities across the United States have started proposing the same gesture in their cities:
                     <a href='https://www.clnewsletter.org/post/the-way-of-the-cross-around-america'>Click here to learn more about WoCs organized around the Uniter States.</a> </p>
                 </div>
