--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <p class="lead mb-5"> The gesture of the Way of the Cross proposed by Fr Giussani has spread around the world.
                      On a cloudy and rainy Good Friday in 1996, a handful of friends belonging to Communion and Liberation in the United States made the first Way of the Cross over the Brooklyn Bridge.
                         With the blessing of then Bishop of Brooklyn, H.E. Thomas V. Daily, and accompanied by Fr. Ronald Marino from the Diocese of Brooklyn, less than thirty people followed the Cross along the bridge that day.
-                        Last year, around three thousands people participated
+                        The gesture continued for over 25 years, and last year, around three thousands people participated
                         <a href='https://wocbrooklynbridge.wordpress.com/'>(Click here to learn more about the WoC in New York City)</a>.
-                    Since then, tens of cities across the United States have started proposing the same gesture in their cities:
+                    In the past years, tens of cities across the United States have started proposing the same gesture locally:
                     <a href='https://www.clnewsletter.org/post/the-way-of-the-cross-around-america'>Click here to learn more about WoCs organized around the Uniter States.</a> </p>
                 </div>
             </section>
