--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         With the blessing of then Bishop of Brooklyn, H.E. Thomas V. Daily, and accompanied by Fr. Ronald Marino from the Diocese of Brooklyn, less than thirty people followed the Cross along the bridge that day.
                         The gesture continued for over 25 years, and last year, around three thousands people participated
                         <a href='https://wocbrooklynbridge.wordpress.com/'>(Click here to learn more about the WoC in New York City)</a>.
-                    In the past years, tens of cities across the United States have started proposing the same gesture locally:
+                    In the past years, the same gesture have been proposed every years in tens of cities across the United States:
                     <a href='https://www.clnewsletter.org/post/the-way-of-the-cross-around-america'>Click here to learn more about WoCs organized around the Uniter States.</a> </p>
                 </div>
             </section>
