Modified date and flyer file from 2023 to 2024

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="resume-section" id="When">
                 <div class="subheading mb-3">
                     <h2 class="mb-5">When</h2>
-                    The Way of Cross will be <h3 class="text-center"> on Good Friday, April 7th, 2023 </h3>
+                    The Way of Cross will be <h3 class="text-center"> on Good Friday, March 29th, 2024 </h3>
                     We will start at 10.30 am and conclude by 1.00 pm.
                 </div>
             </section>
@@ -81,7 +81,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Share</h2>
                     <div class="subheading mb-3">Dowload and Share the Flyer</div>
-                    <object data="dist/assets/img/Flyer 2023 - WoCRaleigh.pdf" width="1000" height="1000" type='application/pdf'></object>
+                    <object data="dist/assets/img/Flyer 2024 - WayOfTheCrossRaleigh.pdf" width="1000" height="1000" type='application/pdf'></object>
                 </div>
             </section>
             <!-- Contact-->
