--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Share</h2>
                     <div class="subheading mb-3">Dowload and Share the Flyer</div>
-                    <object data="dist/assets/img/WOC 2025 NC.pdf" width="1000" height="1000" type='application/pdf'></object>
+                    <object data="dist/assets/img/WOC 2025 NC Flyer.pdf" width="1000" height="1000" type='application/pdf'></object>
                 </div>
             </section>
             <!-- Contact-->
